@@ -28,6 +28,19 @@ Known issues:
   
     This is either caused by threading problems or update_file_info not being 
     called. There's a bunch of FIXME's below with more information.
+    
+    A quick workaround for this that might work:
+    
+      * At the moment we're _only_ using our inotify handler to let us know
+        when something changes. This is a workaround for update_file_info's
+        limitations. We're basically only using update_file_info to apply the 
+        emblem. However, update_file_info works perfectly to let us know
+        an item we're currently viewing modified.
+        
+        So the workaround is to use that... next to the inotify handler.
+        
+        The inotify handler will be used to let us know of things we can't see
+        and update_file_info for those things that we can see.
 
   * Multiple emblems are attached to a single item which leads to the one
     obscuring the other. So if an item has "normal" status, but it changes to 
